--- a/index.html
+++ b/index.html
@@ -236,134 +236,6 @@
             border-color: #fc8e52;
         }
 
-        /* ホバー＆フォーカスのちょい浮きアニメ */
-        .allergy-buttons button:hover,
-        .limbs-buttons button:hover,
-        .Mokuteki-buttons button:hover,
-        .Power-buttons button:hover,
-        .experience-buttons button:hover,
-        .priority-buttons button:hover,
-        .demand-buttons button:hover,
-        .chance-buttons button:hover,
-        .Introduction-buttons button:hover,
-        .delivery-buttons button:hover,
-        .menu-buttons button:hover,
-        .allergy-buttons button:focus-visible,
-        .limbs-buttons button:focus-visible,
-        .Mokuteki-buttons button:focus-visible,
-        .Power-buttons button:focus-visible,
-        .experience-buttons button:focus-visible,
-        .priority-buttons button:focus-visible,
-        .demand-buttons button:focus-visible,
-        .chance-buttons button:focus-visible,
-        .Introduction-buttons button:focus-visible,
-        .delivery-buttons button:focus-visible,
-        .menu-buttons button:focus-visible {
-            transform: translateY(-2px);
-            box-shadow: 0 6px 16px rgba(0, 0, 0, .08);
-            outline: none;
-        }
-
-        /* ふわっとスライドイン */
-        @keyframes fadeSlideIn {
-            from {
-                opacity: 0;
-                transform: translateY(6px);
-            }
-
-            to {
-                opacity: 1;
-                transform: translateY(0);
-            }
-        }
-
-        /* （任意）ちょいステップで順番に入る感じ */
-        .allergy-buttons button:nth-child(1),
-        .limbs-buttons button:nth-child(1),
-        .Mokuteki-buttons button:nth-child(1),
-        .Power-buttons button:nth-child(1),
-        .experience-buttons button:nth-child(1),
-        .priority-buttons button:nth-child(1),
-        .demand-buttons button:nth-child(1),
-        .chance-buttons button:nth-child(1),
-        .Introduction-buttons button:nth-child(1),
-        .delivery-buttons button:nth-child(1),
-        .menu-buttons button:nth-child(1) {
-            animation-delay: .02s;
-        }
-
-        .allergy-buttons button:nth-child(2),
-        .limbs-buttons button:nth-child(2),
-        .Mokuteki-buttons button:nth-child(2),
-        .Power-buttons button:nth-child(2),
-        .experience-buttons button:nth-child(2),
-        .priority-buttons button:nth-child(2),
-        .demand-buttons button:nth-child(2),
-        .chance-buttons button:nth-child(2),
-        .Introduction-buttons button:nth-child(2),
-        .delivery-buttons button:nth-child(2),
-        .menu-buttons button:nth-child(2) {
-            animation-delay: .06s;
-        }
-
-        .allergy-buttons button:nth-child(3),
-        .limbs-buttons button:nth-child(3),
-        .Mokuteki-buttons button:nth-child(3),
-        .Power-buttons button:nth-child(3),
-        .experience-buttons button:nth-child(3),
-        .priority-buttons button:nth-child(3),
-        .demand-buttons button:nth-child(3),
-        .chance-buttons button:nth-child(3),
-        .Introduction-buttons button:nth-child(3),
-        .delivery-buttons button:nth-child(3),
-        .menu-buttons button:nth-child(3) {
-            animation-delay: .10s;
-        }
-
-        /* グリッド内でボタンをしっかり広げる */
-        .demand-buttons button {
-            width: 100%;
-        }
-
-
-        /* ボタンはグリッド内で全幅 */
-        .demand-buttons button {
-            width: 100%;
-        }
-
-        /* ☑ その他入力欄は “2列ぶち抜き”＆見た目調整 */
-        .demand-other-wrap {
-            display: none;
-            /* 初期は非表示 */
-            grid-column: 1 / -1;
-            /* ★ ここが肝：2列ぶち抜き */
-            margin-top: -2px;
-            /* （好みで微調整） */
-        }
-
-        .demand-other-wrap.show {
-            display: block;
-        }
-
-        .demand-other-wrap input {
-            width: 100%;
-            padding: 10px 12px;
-            border: 1px solid #ccc;
-            border-radius: 8px;
-            box-sizing: border-box;
-            font: inherit;
-        }
-
-
-        .date-inputs input[type="datetime-local"] {
-            width: calc(100% - 22px);
-            padding: 10px;
-            margin-bottom: 20px;
-            border: 1px solid #ccc;
-            border-radius: 4px;
-            box-sizing: border-box;
-        }
-
         .submit-button {
             width: 100%;
             padding: 15px;
@@ -530,7 +402,7 @@
         }
 
         button:hover {
-            background-color: #58453b;
+            background-color: #f0f0f0;
             transform: scale(1.00);
         }
 
@@ -774,7 +646,7 @@
         <input type="hidden" id="message5" />
 
         <!-- 施術中（単一選択） -->
-        <div class="label">　　施術中<span class="required">必須</span></div>
+        <div class="label">　　施術中<span class="required">必須</span><br>（複数回答可）</div>
         <div class="chance-buttons" id="chanceGroup">
             <button type="button" id="chanceTalk" onclick="selectChance(this)">楽しく会話したい</button>
             <button type="button" id="chanceMovie1" onclick="selectChance(this)">動画鑑賞</button>
@@ -782,7 +654,7 @@
         </div>
 
         <!-- 当店を選んだ理由（複数選択＋紹介者名） -->
-        <div class="label">　　当店を選んでくださった理由を<span class="required">必須</span><br>教えてください</div>
+        <div class="label">　　当店を選んでくださった理由を<span class="required">必須</span><br>教えてください<br>（複数回答可）</div>
         <div class="demand-buttons" id="reasonGroup">
             <button type="button" id="reasonGMB" onclick="selectReason(this)">Googleマイビジネス（クチコミ）</button>
             <button type="button" id="reasonNear" onclick="selectReason(this)">近かった</button>
@@ -814,12 +686,12 @@
             <button type="button" id="jobOther" onclick="selectJob(this)">専業主婦・その他</button>
         </div>
         <div id="jobOtherWrap" style="display:none; margin:10px 0 20px;">
-            <div class="label">　　他の方はこちらにお書きください</div>
+            <div class="label">他の方はこちらにお書きください</div>
             <input id="jobOtherInput" type="text" placeholder="その他の内容を入力してください" />
         </div>
 
         <!-- 趣味（単一選択＋その他） -->
-        <div class="label">　　趣味<span class="required">必須</span></div>
+        <div class="label">　　趣味<span class="required">必須</span><br>（複数回答可）</div>
         <div class="Mokuteki-buttons" id="hobbyGroup">
             <button type="button" id="hobbyTrip" onclick="selectHobby(this)">旅行</button>
             <button type="button" id="hobbySports" onclick="selectHobby(this)">スポーツ</button>
@@ -829,12 +701,12 @@
             <button type="button" id="hobbyOther" onclick="selectHobby(this)">その他</button>
         </div>
         <div id="hobbyOtherWrap" style="display:none; margin:10px 0 20px;">
-            <div class="label">　　他の方はこちらにお書きください</div>
+            <div class="label">他の方はこちらにお書きください</div>
             <input id="hobbyOtherInput" type="text" placeholder="その他の内容を入力してください" />
         </div>
 
         <!-- 爪・手足の状態（単一選択＋その他） -->
-        <div class="label">　　爪・手足の状態について<span class="required">必須</span><br>気になることを教えてください</div>
+        <div class="label">　　爪・手足の状態について<span class="required">必須</span><br>気になることを教えてください<br>（複数回答可）</div>
         <div class="limbs-buttons" id="nailsGroup">
             <button type="button" id="nailsDouble" onclick="selectNails(this)">二枚爪</button>
             <button type="button" id="nailsWarp" onclick="selectNails(this)">爪がそる</button>
@@ -848,7 +720,7 @@
             <button type="button" id="nailsOther" onclick="selectNails(this)">その他</button>
         </div>
         <div id="nailsOtherWrap" style="display:none; margin:10px 0 20px;">
-            <div class="label">　　他の方はこちらにお書きください</div>
+            <div class="label">他の方はこちらにお書きください</div>
             <input id="nailsOtherInput" type="text" placeholder="その他の内容を入力してください" />
         </div>
 
@@ -862,7 +734,7 @@
         </div>
 
         <!-- 取れやすい爪（単一選択） -->
-        <div class="label">　　取れやすい爪はありますか？<span class="required">必須</span></div>
+        <div class="label">　　取れやすい爪はありますか？<span class="required">必須</span><br>（複数回答可）</div>
         <div class="delivery-buttons" id="fragileFingerGroup">
             <button type="button" id="fragileThumb" onclick="selectFragileFinger(this)">親指</button>
             <button type="button" id="fragileIndex" onclick="selectFragileFinger(this)">人差し指</button>
@@ -885,9 +757,9 @@
         </div>
 
         <!-- 手の使い方/指先の使用頻度（単一選択） -->
-        <div class="label">　手の使い方、指先の使用頻度<span class="required">必須</span><br>について教えてください。</div>
+        <div class="label">　手の使い方、指先の使用頻度<span class="required">必須</span><br>について教えてください。<br>（複数回答可）</div>
         <div class="experience-buttons" id="handUsageGroup">
-            <button type="button" id="handUseiti" onclick="selectHandUsage(this)">日常生活で指先をよく使う（爪先でシールを剥がす等）</button>
+            <button type="button" id="handUseiti" onclick="selectHandUsage(this)">日常生活で指先をよく使う<br>（爪先でシールを剥がす等）</button>
             <button type="button" id="handUseni" onclick="selectHandUsage(this)">水仕事が多い</button>
             <button type="button" id="handUsesan" onclick="selectHandUsage(this)">パソコン作業が多い</button>
             <button type="button" id="handUseyon" onclick="selectHandUsage(this)">小さい子供がいる</button>
@@ -898,7 +770,7 @@
         </div>
 
         <!-- 今までのサロンで嫌だった事（単一選択：暫定5段階） -->
-        <div class="label">　今までのサロンで嫌だった事<span class="required">必須</span><br>があれば教えてください。</div>
+        <div class="label">　今までのサロンで嫌だった事<span class="required">必須</span><br>があれば教えてください。<br>（複数回答可）</div>
         <div class="Power-buttons" id="dislikeGroup">
             <button type="button" id="dislike1" onclick="selectDislike(this)">接客態度</button>
             <button type="button" id="dislike2" onclick="selectDislike(this)">熱い、痛い</button>
@@ -907,7 +779,7 @@
         </div>
 
         <!-- お仕事でOKな範囲（単一選択） -->
-        <div class="label">　　お仕事でOKな範囲を教えてください。<span class="required">必須</span></div>
+        <div class="label">　　お仕事でOKな範囲を教えてください。<span class="required">必須</span><br>（複数回答可）</div>
         <div class="experience-buttons" id="workScopeGroup">
             <button type="button" id="workOkYes" onclick="selectWorkScope(this)">自爪風</button>
             <button type="button" id="workOkNo" onclick="selectWorkScope(this)">ナチュラル</button>
@@ -919,7 +791,7 @@
         <textarea id="message6" rows="1" placeholder="入力してください"></textarea> <!-- メッセージ入力フィールド -->
 
         <!-- ネイルをすることの目的（単一選択：暫定5段階） -->
-        <div class="label">　　ネイルをすることの目的・得たいことはなんですか？<span class="required">必須</span></div>
+        <div class="label">　　ネイルをすることの<span class="required">必須</span><br>目的・得たいことはなんですか？<br>（複数回答可）</div>
         <div class="Power-buttons" id="purposeGroup">
             <button type="button" id="purpose1" onclick="selectPurpose(this)">弱め</button>
             <button type="button" id="purpose2" onclick="selectPurpose(this)">やや弱め</button>
@@ -929,7 +801,7 @@
         </div>
 
         <!-- 興味のあるメニュー（単一選択） -->
-        <div class="label">　　興味のあるメニューはなんですか？<span class="required">必須</span></div>
+        <div class="label">　　興味のあるメニューはなんですか？<span class="required">必須</span><br>（複数回答可）</div>
         <div class="experience-buttons" id="interestGroup">
             <button type="button" id="interestYes" onclick="selectInterest(this)">ジェルネイル</button>
             <button type="button" id="interestNo" onclick="selectInterest(this)">自爪育成・ケア</button>
@@ -947,7 +819,7 @@
 
         <!-- 追質問（吸うと答えた方のみ表示） -->
         <div id="tabakoFollow" style="display:none;">
-            <div class="label">　　吸うと答えられた人は<span class="required">必須</span><br>下記もお答えください</div>
+            <div class="label">　　吸うと答えられた人は<span class="required">必須</span><br>下記もお答えください<br>（複数回答可）</div>
             <div class="experience-buttons" id="tabakodottiGroup">
                 <button type="button" id="tabakodottiYes" onclick="selecttabakodotti(this)">紙タバコ</button>
                 <button type="button" id="tabakodottiNo" onclick="selecttabakodotti(this)">電子タバコ</button>
@@ -956,13 +828,13 @@
 
 
         <!-- アレルギー（単一選択＋詳細） -->
-        <div class="label">　　アレルギーはありますか？<span class="required">必須</span></div>
+        <div class="label">　　アレルギーはありますか？<span class="required">必須</span><br>（複数回答可）</div>
         <div class="allergy-buttons" id="allergyGroup">
             <button type="button" id="allergyYes" onclick="selectAllergy(this)">ある</button>
             <button type="button" id="allergyNo" onclick="selectAllergy(this)">なし</button>
         </div>
         <div id="allergyOtherWrap" style="display:none; margin:10px 0 20px;">
-            <div class="label">　　あるを選んだ方はお書きください</div>
+            <div class="label">あるを選んだ方はお書きください</div>
             <input id="allergyOtherInput" type="text" placeholder="アレルギー内容を入力してください" />
         </div>
 
@@ -1583,10 +1455,10 @@ ${jobValue ? `\n【職業】\n・${jobValue}\n` : ''}【趣味】\n・${hobbyVal
 【普段のネイルの持ち】\n・${holdValue}
 【取れやすい爪】\n・${fragileFingerValue}
 【取れ方】\n・${peelValue}
-【今までのサロンで嫌だった事】\n・${dislikeValue}
 【手の使い方/指先の使用頻度】\n・${handUsageValue}
+【今までのサロンで嫌だった事】\n・${dislikeValue}
 【お仕事でOKな範囲】\n・${workScopeValue}
-【お仕事でOKな範囲】\n・${iro}
+【好きな色、やってみたい色】\n・${iro}
 【ネイルの目的】\n・${purposeValue}
 【興味のあるメニュー】\n・${interestValue}
 ${tabakoLine}【アレルギー】\n・${allergyValue}${allergyDetail ? `（${allergyDetail}）` : ''}
